<resources>
    <string name="app_name">Bassitology (Teacher)</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="login">Login</string>
    <string name="wait">Wait...</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="stages">Stages</string>
    <string name="classes">Classes</string>
    <string name="subjects">Subjects</string>
    <string name="chapters">Chapters</string>
    <string name="lessons">Lessons</string>
    <string name="questions">Questions</string>
    <string name="exams">Exams</string>
    <string name="loggingin">Logging In...</string>
    <string name="inc_email_pass">Incorrect email or password</string>
    <string name="havenot_account"><![CDATA[I Haven\'t an account yet? <font color="#3A9AFF">Sign Up.</font>]]></string>
    <string name="have_account"><![CDATA[I Have an account ? <font color="#3A9AFF">Log In.</font>]]></string>

    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone number</string>
    <string name="user_not_exist">User not exist</string>
    <string name="failed">Failed! try again later</string>
    <string name="edit_profile">Edit profile</string>
    <string name="change_language">Change language</string>
    <string name="social_media">Social Media</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">Youtube</string>
    <string name="save">Save</string>
    <string name="ch_stage">إختر المرحلة</string>
    <string name="ch_class">Choose Class</string>
    <string name="ch_subject">Choose Subject</string>
    <string name="settings">Settings</string>
    <string name="class_name">Class name</string>
    <string name="add">Add</string>
    <string name="no_items">No items to show</string>
    <string name="deleting">Deleting...</string>
    <string name="lesson_name">Lesson name</string>
    <string name="chapter">Chapter</string>
    <string name="ch_chapter">Choose chapter</string>
    <string name="subject_exams">Subject Exams</string>
    <string name="show">Show</string>
    <string name="chapter_exams">Chapter Exams</string>
    <string name="lessons_exams">Lessons Exams</string>
    <string name="add_subject_exams">Add Subject Exam</string>
    <string name="add_chapter_exams">Add Chapter Exam</string>
    <string name="add_lesson_exam">Add Lesson Exam</string>
    <string name="select_photo">Select Photo</string>
    <string name="add_result">Add Answer</string>
    <string name="add_exam">Add Exam</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="wrong_answer">Wrong Answer</string>
    <string name="exam_title">Exam title</string>
    <string name="answers">Answers:</string>
    <string name="add_question">Add Question</string>
    <string name="guide_link_youtube_link">Guide link(optional)</string>
    <string name="ples_delete_ques_first">please delete questions of exam first</string>
    <string name="plz_delete_exams">please delete exams first</string>
    <string name="plz_delete_lessons_first">please delete lessons first</string>
    <string name="suc">Success!</string>


</resources>