<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/select_photo"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="16sp"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey1"
            />


        <TextView
            android:id="@+id/tvGallery"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/gallery"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:gravity="center"

            />

        <TextView
            android:id="@+id/tvCamera"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/camera"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:gravity="center"

            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey1"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:text="@string/cancel"
            android:layout_margin="5dp"

            />

        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="8dp"
            />

    </LinearLayout>
</layout>