<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>


    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_exam"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_margin="16sp"
            android:fontFamily="@font/font_regular"
            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey1"
            />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_margin="16dp"
            android:background="@drawable/small_rounded_stroke"
            android:padding="16dp"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            android:hint="@string/exam_title"
            android:gravity="start|top"
            android:textSize="14sp"
            android:fontFamily="@font/font_regular"


            />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey1"
            android:layout_marginTop="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            >
            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="56dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:text="@string/save"
                android:layout_margin="5dp"
                android:fontFamily="@font/font_regular"


                />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="56dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:text="@string/cancel"
                android:layout_margin="5dp"
                android:fontFamily="@font/font_regular"


                />
        </LinearLayout>


        <androidx.legacy.widget.Space
            android:layout_width="0dp"
            android:layout_height="8dp"
            />

    </LinearLayout>

</layout>