<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <data>
        <variable
            name="model"
            type="com.bassitology_admin.model.QuestionModel" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".uis.activity_add_exam_lesson_questions.AddExamLessonQuestionsActivity"
        android:orientation="vertical"
        >
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:background="@color/grey0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintDimensionRatio="1:.8"
                        />
                    <Button
                        android:id="@+id/btnChooseImage"
                        android:layout_width="wrap_content"
                        android:minWidth="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/rounded_white"
                        android:textSize="15sp"
                        android:textColor="@color/end_color"
                        android:text="@string/select_photo"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:fontFamily="@font/font_bold"
                        />



                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardAddResult"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="4dp"
                    app:cardCornerRadius="28dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        >
                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/ic_circle_add"
                            app:tint="@color/color1"
                            />
                        <androidx.legacy.widget.Space
                            android:layout_width="16dp"
                            android:layout_height="0dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:text="@string/add_result"
                            android:textColor="@color/black"
                            android:fontFamily="@font/font_bold"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    />

                <EditText
                    android:id="@+id/edtLink"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/small_rounded_stroke"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:inputType="textUri"
                    android:hint="@string/guide_link_youtube_link"
                    android:gravity="start|top"
                    android:textSize="14sp"
                    android:fontFamily="@font/font_regular"
                    android:layout_marginTop="16dp"
                    android:text="@={model.link}"
                    />


                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@drawable/small_rounded_gradient_enabled"
                    android:layout_marginTop="16dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/font_bold"
                    android:text="@string/save"
                    android:enabled="@{model.valid,default=false}"
                    />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
