<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

        <variable
            name="model"
            type="com.bassitology_admin.model.LoginModel" />
        <import type="android.text.Html"/>


    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey5"
        android:fillViewport="true"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:src="@drawable/top_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:scaleType="fitXY"
                />



            <LinearLayout
                android:id="@+id/llLogin"

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logo"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/font_bold"
                    />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    app:cardBackgroundColor="@color/grey1"
                    app:cardCornerRadius="12dp"
                    app:cardElevation="3dp"

                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintEnabled="false"
                        app:startIconTint="@color/color1"
                        app:startIconDrawable="@drawable/ic_mail"

                        app:errorEnabled="false"
                        >
                        <EditText
                            android:id="@+id/edtUserName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/transparent"
                            android:hint="@string/email_address"
                            android:inputType="textEmailAddress"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey4"
                            android:textSize="14sp"
                            android:gravity="start|center_vertical"
                            android:textAlignment="viewStart"
                            android:fontFamily="@font/font_regular"
                            android:text="@={model.email}"

                            />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    app:cardBackgroundColor="@color/grey1"
                    app:cardCornerRadius="12dp"

                    >

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:hintEnabled="false"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/color1"
                        app:startIconTint="@color/color1"
                        app:startIconDrawable="@drawable/ic_lock"
                        >
                        <EditText
                            android:id="@+id/edtPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/grey1"
                            android:lines="1"
                            android:hint="@string/password"
                            android:textColorHint="@color/grey4"
                            android:textSize="14sp"
                            android:textColor="@color/black"
                            android:gravity="start|center_vertical"
                            android:textAlignment="viewStart"
                            android:inputType="textPassword"
                            android:fontFamily="@font/font_regular"
                            android:text="@={model.password}"
                            />

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="200dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/small_rounded_gradient_enabled"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:fontFamily="@font/font_regular"
                    android:textSize="18sp"
                    android:enabled="@{model.valid,default=false}"
                    />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:textSize="14sp"
                    android:fontFamily="@font/font_bold"
                    android:text="@{Html.fromHtml(@string/havenot_account)}"
                    />


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
